@@ -1,44 +1,0 @@
-.tabs {
-	margin: 0 0 1px 1px;
-	padding: 0;
-}
-
-.tab {
-	display: inline-block;
-	zoom: 1;
-	*display: inline;
-	background: #566B7F;
-	border-bottom: #000;
-	-moz-border-radius: 4px 4px 0 0;
-	-webkit-border-radius: 4px 4px 0 0;
-}
-
-.tab a {
-	font-size: 14px;
-	line-height: 2em;
-	display: block;
-	padding: 0 10px;
-	outline: none;
-}
-
-.tab a:hover {
-	/* text-decoration: underline; */
-	
-}
-
-.tab.active {
-	padding-top: 6px;
-	position: relative;
-	top: 1px;
-	border-bottom: #000;
-}
-
-.tab a.active {
-	font-weight: bold;
-}
-
-.tab-container .panel-container {
-	-moz-border-radius: 0 4px 4px 4px;
-	-webkit-border-radius: 0 4px 4px 4px;
-	padding: 0;
-}
