@@ -4,8 +4,6 @@ defined ( '_SECURE_' ) or die ( 'Forbidden' );
 if (!isadmin()) { forcenoaccess (); };
 
 $content = "
-	<link href='" . $core_config['http_path']['themes'] . "/common/jscss/pluginmanager.css' rel='stylesheet' />
-	<script src='" . $core_config['http_path']['themes'] . "/common/jscss/jquery.js' type='text/javascript'></script>
 	<script src='" . $core_config['http_path']['plug'] . "/tools/pluginmanager/jscss/jquery.hashchange.js' type='text/javascript'></script>
 	<script src='" . $core_config['http_path']['plug'] . "/tools/pluginmanager/jscss/jquery.easytabs.js' type='text/javascript'></script>
 	<script type='text/javascript'>
